<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">medTime</string>
    <string name="action_settings">Opções</string>
    <string name="cadastro">Cadastro de Usuários</string>
    <string name="bemVindo">Uow, it\'s medTime!</string>
    <string name="login">CPF:</string>
    <string name="title_activity_cadastro">Cadastro de Usuários</string>
    <string name="nome">Nome: </string>
    <string name="nomeMedicamento">Nome do Medicamento </string>
    <string name="senha">Senha: </string>
    <string name="matricula">CPF: </string>
    <string name="sexo">Sexo: </string>
    <string name="radio_fem">Feminino</string>
    <string name="radio_masc">Masculino</string>
    <string name="radio_paciente">Paciente</string>
    <string name="radio_medico">Médico</string>
    <string name="funcao">Função: </string>
    <string name="rua">Rua: </string>
<<<<<<< HEAD
    <string name="novo">Sou novo aqui</string>
=======
>>>>>>> 8c37b46ae70314dbc59ebcac4e41f59542122670
    <string name="bairro">Bairro: </string>
    <string name="numero">Número: </string>
    <string name="cidade">Cidade: </string>
    <string name="estado">Estado: </string>
    <string name="numEmergencia">Número de emergência </string>
    <string name="cadastrar">Cadastrar</string>
    <string name="Logar">Entrar</string>
    <string name="btnEmergenciaHome">Discar Número Emergência</string>
    <string name="Idade">Idade</string>
    <string name="title_activity_admin">medTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_usuario">Area Usuário</string>
    <string name="bemVindoLogado">Seja Bem Vindo(a)</string>
    <string name="cadastroUsuario">Cadastrar Usuário</string>
    <string name="cadastroProdutos">Cadastrar Medicamento</string>
    <string name="meuPerfil">Meu Perfil</string>
    <string name="cancelar">Cancelar</string>
    <string name="password">Senha</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="administrador">Administrador</string>
    <string name="title_activity_perfil">Meu Perfil</string>
    <string name="alterar">Alterar</string>
    <string name="voltar">Voltar</string>
    <string name="sair">Sair</string>
    <string name="title_activity_produtos">Cadastro de Medicamento</string>
    <string name="nomeprodutos">Nome: </string>
    <string name="valorRemedio">Valor: </string>
    <string name="codigoprodutos">Codigo: </string>
    <string name="excluir">Excluir</string>
    <string name="listarUsuario">Listar Usuários</string>
    <string name="title_activity_usuarios">UsuariosActivity</string>
<<<<<<< HEAD
    <string name="escolhaEdicao">Toque para alterar password</string>
    <string name="escolhaEdicaoMed">Toque para editar</string>
=======
    <string name="escolhaEdicao">Clique no usuário para alterar password</string>
>>>>>>> 8c37b46ae70314dbc59ebcac4e41f59542122670
    <string name="title_activity_dialog">Alterar senha</string>
    <string name="novaSenha">Entre com a nova senha: </string>
    <string name="confirmar_senha">Confirmação Senha: </string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_list_usuario">Usuários ativos</string>
    <string name="editar_senha">Editar Senha</string>
    <string name="produto">Medicamento:</string>
    <string name="valor">Valor: </string>
    <string name="title_activity_admin_select">MedTime - Menu</string>
    <string name="gerenciarUsuario">Gerenciar Usuário </string>
    <string name="gerenciarMedicamento">Gerenciar Medicamento </string>
    <string name="gerenciar_opcao">Selecionar Opção </string>
    <string name="gerenciarAlarme">Gerenciar Alarme </string>
    <string name="title_activity_cadastrar_medicamento">Cadastrar Medicamento</string>
<<<<<<< HEAD
    <string name="cadastrarMedicamento">Adicionar medicamento</string>
    <string name="meusMedicamentos">Meus medicamentos</string>
    <string name="nomeLaboratorio">Nome do Laboratório</string>
    <string name="title_activity_meus_medicamentos">MeusMedicamentos</string>
=======
    <string name="cadastrarMedicamento">Cadastrar Medicamento</string>
    <string name="nomeLaboratorio">Nome do Laboratório</string>
>>>>>>> 8c37b46ae70314dbc59ebcac4e41f59542122670



</resources>
