<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.ufscar.dc.medtime.AdminSelectActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left">

                <ImageView
                    android:id="@+id/imageAvatar"
                    android:layout_width="64dp"
                    android:layout_height="59dp"
                    android:src="@drawable/feminino"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bemVindoLogado" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGerenciarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gerenciarUsuario"
                android:layout_marginTop="3dp"/>

            <Button
                android:id="@+id/btnGerenciarMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gerenciarMedicamento" />

            <Button
                android:id="@+id/btnPerfilAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meuPerfil" />

            <Button
                android:id="@+id/btnSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sair" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
