<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufscar.dc.medtime.AdminMedicamentoActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left">

                <ImageView
                    android:id="@+id/imageAvatar"
                    android:layout_width="64dp"
                    android:layout_height="59dp"
                    android:src="@drawable/feminino" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bemVindoLogado" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCadastrarMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cadastrarMedicamento" />

<!--            <Button
                android:id="@+id/btnGerenciarMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gerenciarMedicamento" />-->

            <Button
                android:id="@+id/btnGerenciarAlarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gerenciarAlarme" />

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
