<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.ufscar.dc.medtime.CadastrarMedicamentoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cadastrarMedicamento"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtIdMedicamento"
        android:layout_marginTop="20dp"
        android:text="ID Medicamento"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeMedicamento"
        android:text="@string/nomeMedicamento"
        android:layout_below="@+id/edtIdMedicamento"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtLaboratorioMedicamento"
        android:layout_below="@+id/edtNomeMedicamento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/nomeLaboratorio"
        android:textColor="@android:color/darker_gray"
        android:layout_alignRight="@+id/edtNomeMedicamento"
        android:layout_alignEnd="@+id/edtNomeMedicamento" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtValorMedicamento"
        android:layout_below="@+id/edtLaboratorioMedicamento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/valorRemedio"
        android:textColor="@android:color/darker_gray"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/btnCadastrarMedicamento"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="64dp"
        android:layout_height="59dp"
        android:src="@drawable/pill"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignBottom="@+id/edtIdMedicamento"
        android:layout_alignRight="@+id/edtNomeMedicamento"
        android:layout_alignEnd="@+id/edtNomeMedicamento" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnCategoriaMedicamento"
        android:entries="@array/categoriaRemedio"
        android:layout_below="@+id/edtValorMedicamento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
